# rpa-freight-bridge

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: audit.py  callbacks.py  monitoring.py
core/: circuit_breaker.py  config.py  constants.py  context.py  database.py  exceptions.py  hmac_validator.py  http_client.py  logger.py  metrics.py  middleware.py  rate_limit.py  routing.py  security.py  task_registry.py
models/: transaction.py
repositories/: audit_repository.py
schemas/: callbacks.py  payloads.py
scripts/: trigger_orchestrator.py
services/: database.py  orchestrator.py  uipath_client.py
tests/: test_api.py
